--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "bezhansalleh/filament-language-switch": "^4.0",
+        "filament/filament": "^4.2",
+        "filament/spatie-laravel-media-library-plugin": "^4.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1",
+        "laravel/passport": "^13.4",
+        "laravel/tinker": "^2.10",
+        "maatwebsite/excel": "^3.1",
         "owen-it/laravel-auditing": "^14.0",
-        "spatie/laravel-medialibrary": "^11.17"
+        "spatie/laravel-activitylog": "^4.10",
+        "spatie/laravel-medialibrary": "^11.17",
+        "spatie/laravel-permission": "^6.23"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
