--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "filament/spatie-laravel-media-library-plugin": "^4.2",
         "laravel/framework": "^12.0",
         "laravel/passport": "^13.4",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10",
         "maatwebsite/excel": "^3.1",
         "owen-it/laravel-auditing": "^14.0",
