--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Localization
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: any
   
   # UI Components
   google_fonts: ^6.1.0
